# BlackBelt

./: .gitignore  CMakeLists.txt  CMakeLists.txt.template  CMakeSettings.json  README.md
libs/: profile.h  test_runner.h
week1/: CMakeLists.txt
week1/Forbidden_domain_with_sanitizer/: CMakeLists.txt  main.cpp
week1/Personal_budget_with_sanitizer/: CMakeLists.txt  main.cpp
week1/Sum_without_overflow/: CMakeLists.txt  main.cpp
week1/TransportManager_E/: CMakeLists.txt  bus_manager.h  graph.h  json.cpp  json.h  key_names.h  main.cpp  router.h
week1/TransportManager_E_with_sanitizer/: CMakeLists.txt  graph.h  main.cpp  router.h  transport_router.cpp
week1/TransportManager_F/: CMakeLists.txt  svg.h  tester.cpp
week1/TransportManager_G/: CMakeLists.txt  descriptions.cpp  descriptions.h  json.cpp  json.h  main.cpp  render_settings.h  requests.cpp  requests.h  router.h  svg.cpp  svg.h  transport_catalog.cpp  transport_catalog.h  utils.h
week1/TransportManager_G/input/: input.json  output.json  output_need.json  result.xml  result_need.xml
week1/TransportManager_H/: CMakeLists.txt  descriptions.cpp  main.cpp  sphere.cpp  svg.cpp  svg.h  transport_catalog.cpp  transport_catalog.h  transport_router.h
week1/TransportManager_H/input/: input.json
week1/TransportManager_I/: CMakeLists.txt  descriptions.h  requests.cpp  requests.h  transport_catalog.cpp  transport_catalog.h  transport_router.cpp
week1/TransportManager_I/input/: input.json  result.xml  result_need.xml
week2/: CMakeLists.txt
week2/JsonPrinter/: CMakeLists.txt  main.cpp
week2/PhoneBook/: CMakeLists.txt
week2/SaveAndLoad/: CMakeLists.txt  saveload.h  test.cpp
