add_subdirectory(TransportManager_E)
add_subdirectory(Forbidden_domain_with_sanitizer)
add_subdirectory(Personal_budget_with_sanitizer)
add_subdirectory(TransportManager_E_with_sanitizer)
add_subdirectory(Sum_without_overflow)
add_subdirectory(TransportManager_F)
add_subdirectory(TransportManager_G)
add_subdirectory(TransportManager_H)
add_subdirectory(TransportManager_I)
